# gork

./: .gitignore  Dockerfile  README.md  bot.py  db.py  docker-compose.yml  main.py  pyproject.toml
src/gork/: __init__.py  __main__.py  bot.py  db.py  main.py  models.py  words.py
