[project]
name = "gork"
version = "0.1.0"
description = "an incredibly stupid 'llm' for discord"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "discord-py>=2.6.3",
    "valkey-glide>=2.0.1",
]


[project.scripts]
gork = "gork.main:main"

[tool.uv]
package = true

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[dependency-groups]
dev = [
    "ruff>=0.13.0",
    "ty>=0.0.1a20",
]
